--- a/scss/main.scss
+++ b/scss/main.scss
@@ -4,6 +4,8 @@
 @import "block/logo";
 @import "block/navigation-list";
 @import "block/header";
+@import "block/form";
+@import "block/button";
 
 
 // Base
