--- a/css/main.css
+++ b/css/main.css
@@ -64,6 +64,91 @@
           justify-content: space-between;
 }
 
+.header__text {
+  width: 465px;
+}
+
+.header__text p {
+  line-height: 1.678;
+  margin-bottom: 1em;
+}
+
+.header__title h1 {
+  font-size: 54px;
+  margin-bottom: 25px;
+  font-weight: 700;
+  line-height: 1.46;
+  margin-right: -150px;
+  position: relative;
+  z-index: 9;
+}
+
+.form {
+  background: #fff;
+  -webkit-box-shadow: 0 17px 42px rgba(0, 0, 0, 0.12);
+          box-shadow: 0 17px 42px rgba(0, 0, 0, 0.12);
+  border-radius: 29px;
+  height: 58px;
+}
+
+.form--active {
+  -webkit-box-shadow: 0 17px 42px rgba(247, 132, 52, 0.27);
+          box-shadow: 0 17px 42px rgba(247, 132, 52, 0.27);
+}
+
+.form__label {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  position: relative;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding-left: 72px;
+  height: 100%;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  align-items: center;
+}
+
+.form__label::before {
+  content: "";
+  display: block;
+  width: 24px;
+  height: 19px;
+  background-image: url("/img/icons/mail.svg");
+  background-size: initial;
+  position: absolute;
+  top: 20px;
+  left: 28px;
+}
+
+.form__input {
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  margin-right: 10px;
+}
+
+.button {
+  display: inline-block;
+  height: 58px;
+  padding-left: 37px;
+  padding-right: 37px;
+  border-radius: 29px;
+  background-color: #f78434;
+  line-height: 58px;
+  font-weight: 700;
+  color: #fff;
+  -webkit-transition: all .2s ease-in-out;
+  transition: all .2s ease-in-out;
+}
+
+.button:hover {
+  background-color: #ff6a00;
+}
+
 * {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
