--- a/scss/main.scss
+++ b/scss/main.scss
@@ -6,6 +6,11 @@
 @import "block/header";
 @import "block/form";
 @import "block/button";
+@import "block/clients";
+@import "block/objects";
+@import "block/title";
+@import "block/img-card";
+@import "block/card-info";
 
 
 // Base
