--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -2,6 +2,7 @@ html, body {
     font-family: 'Poppins', sans-serif;
     font-size: 16px;
     color: $black-color;
+    line-height: 1.6875;
 }
 
 .container {
@@ -10,4 +11,21 @@ html, body {
     margin-left: auto;
     padding-left: 15px;
     padding-right: 15px;
+
+    &--fluid {
+        max-width: unset;
+        width: 100%;
+    }
+
+    &--no-padding {
+        padding: 0;
+    }
+}
+
+.container--fluid {
+    width: 100%;
+}   
+
+.none {
+    display: none;
 }
